# the-23-gang-of-four-design-patterns-with-cplusplus

./: CMakeLists.txt  README.adoc
创建型模式/AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  CMakeLists.txt  Product.cpp  Product.h  main.cpp
创建型模式/Builder/: Builder.cpp  Builder.h  CMakeLists.txt  Director.cpp  Director.h  Product.cpp  Product.h  main.cpp
创建型模式/Factory/: CMakeLists.txt  Factory.cpp  Factory.h  Product.cpp  Product.h  main.cpp
创建型模式/Prototype/: CMakeLists.txt  Prototype.cpp  Prototype.h  main.cpp
创建型模式/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
结构型模式/Adapter/: CMakeLists.txt
结构型模式/Bridge/: Abstraction.cpp  Abstraction.h  AbstractionImp.cpp  AbstractionImp.h  CMakeLists.txt  main.cpp
结构型模式/Composite/: CMakeLists.txt  Component.cpp  Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h  main.cpp
结构型模式/Decorator/: CMakeLists.txt  Decorator.cpp  Decorator.h  main.cpp
结构型模式/Facade/: CMakeLists.txt  Facade.cpp  Facade.h  main.cpp
结构型模式/Flyweight/: CMakeLists.txt  Flyweight.cpp  Flyweight.h  FlyweightFactory.cpp  FlyweightFactory.h  main.cpp
结构型模式/Proxy/: CMakeLists.txt  Proxy.cpp  Proxy.h  main.cpp
行为模式/ChainofResponsibility/: CMakeLists.txt  Handle.cpp  Handle.h  main.cpp
行为模式/Command/: CMakeLists.txt  Command.cpp  Command.h  Invoker.cpp  Invoker.h  Reciever.cpp  Reciever.h  main.cpp
行为模式/Interpreter/: CMakeLists.txt  Context.cpp  Context.h  Interpret.cpp  Interpret.h  main.cpp
行为模式/Iterator/: Aggregate.cpp  Aggregate.h  CMakeLists.txt  Iterator.cpp  Iterator.h  main.cpp
行为模式/Mediator/: Colleage.cpp  (+5 more)
(+40 files in other folders)
